# mcp-personal

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
alembic/: env.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/pages/: Cards.jsx  Entries.jsx
lifelogger/: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md
lifelogger/alembic/versions/: 20240101_000000_001_initial_schema.py
lifelogger/api/: main.py  schemas.py
lifelogger/api/routes/: __init__.py  cards.py  stats.py
lifelogger/core/: sm2.py
lifelogger/db/: database.py  models.py
lifelogger/frontend/src/: index.css
lifelogger/frontend/src/api/: client.js
lifelogger/frontend/src/pages/: Dashboard.jsx  Review.jsx
lifelogger/lifelogger/api/: main.py
lifelogger/lifelogger/api/routes/: entries.py
lifelogger/lifelogger/db/: database.py
lifelogger/mcp/: server.py
