[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lifelogger"
version = "0.1.0"
description = "A personal knowledge system with spaced repetition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[project.scripts]
lifelogger-mcp = "lifelogger.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["lifelogger"]
